--- a/yoast_seo.info.yml
+++ b/yoast_seo.info.yml
@@ -3,8 +3,7 @@ description: Adds Real-time SEO page analysis and configuration
 package: SEO
 
 type: module
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 configure: yoast_seo.settings
 
 dependencies:
