--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,15 @@
         "phpspec/prophecy-phpunit": "v2.0.1",
         "symfony/phpunit-bridge": "^6.2"
     },
+    "scripts": {
+        "docker-shell": "docker exec -ti rtseo_web bash",
+        "site-install": "docker exec -i rtseo_web drush site-install --yes --account-name=admin --account-pass=admin --account-mail='admin@example.com' --site-name='Real-Time SEO Development'",
+        "enable-rtseo": "docker exec -i rtseo_web drush en -y yoast_seo",
+        "cr": "docker exec -i rtse_web drush cr",
+        "phpstan": "docker exec -i rtseo_web phpstan analyse html/modules/contrib/yoast_seo",
+        "phpcs": "docker exec -i rtseo_web phpcs html/modules/contrib/yoast_seo",
+        "phpunit": "docker exec -i rtseo_web phpunit html/modules/contrib/yoast_seo"
+    },
     "extra": {
         "drupal-scaffold": {
             "locations": {
