--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/core": "^10",
         "drupal/core-composer-scaffold": "^10",
         "drupal/devel": "^5.0.2",
+        "drupal/paragraphs": "^1.15",
         "drush/drush": "^11.0",
         "mglaman/phpstan-drupal": "^1.1.25",
         "phpspec/prophecy-phpunit": "v2.0.1",
