--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "enable-rtseo": "docker exec -i rtseo_web drush en -y yoast_seo",
         "cr": "docker exec -i rtse_web drush cr",
         "phpstan": "docker exec -i rtseo_web phpstan analyse html/modules/contrib/yoast_seo",
-        "phpcs": "docker exec -i rtseo_web phpcs html/modules/contrib/yoast_seo",
+        "phpcs": "docker exec -i rtseo_web phpcs --standard=Drupal html/modules/contrib/yoast_seo",
         "phpunit": "docker exec -i -e SIMPLETEST_BASE_URL='http://localhost' -e SIMPLETEST_DB='mysql://root:root@db/rtseo' -e BROWSERTEST_OUTPUT_DIRECTORY='/var/www/html/sites/simpletest/browser_output' rtseo_web phpunit --bootstrap /var/www/html/core/tests/bootstrap.php --printer '\\Drupal\\Tests\\Listeners\\HtmlOutputPrinter' html/modules/contrib/yoast_seo"
     },
     "extra": {
