--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "phpstan/extension-installer": true
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Drupal\\Tests\\yoast_seo\\": "html/modules/contrib/yoast_seo/tests/src"
+        }
+    },
     "repositories": [
         {
             "type": "composer",
@@ -30,12 +35,15 @@
     "require-dev": {
         "composer/installers": "^2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+        "dmore/behat-chrome-extension": "^1.4",
         "drupal/core": "^10",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-dev": "^10",
         "drupal/devel": "^5.0.2",
+        "drupal/drupal-extension": "^5",
         "drupal/paragraphs": "^1.15",
         "drush/drush": "^11.0",
+        "friends-of-behat/mink-debug-extension": "^2.1",
         "mglaman/phpstan-drupal": "^1.1.25",
         "phpspec/prophecy-phpunit": "v2.0.1",
         "phpstan/extension-installer": "^1.1.0",
@@ -48,6 +56,7 @@
         "site-install": "docker exec -i rtseo_web drush site-install --yes --account-name=admin --account-pass=admin --account-mail='admin@example.com' --site-name='Real-Time SEO Development'",
         "enable-rtseo": "docker exec -i rtseo_web drush en -y yoast_seo",
         "cr": "docker exec -i rtse_web drush cr",
+        "behat": "docker exec -ti rtseo_web behat --config html/modules/contrib/yoast_seo/tests/behat.yml",
         "phpstan": "docker exec -i rtseo_web phpstan analyse html/modules/contrib/yoast_seo",
         "phpcs": "docker exec -i rtseo_web phpcs --standard=Drupal html/modules/contrib/yoast_seo",
         "phpunit": "docker exec -i -e SIMPLETEST_BASE_URL='http://localhost' -e SIMPLETEST_DB='mysql://root:root@db/rtseo' -e BROWSERTEST_OUTPUT_DIRECTORY='/var/www/html/sites/simpletest/browser_output' rtseo_web phpunit --bootstrap /var/www/html/core/tests/bootstrap.php --printer '\\Drupal\\Tests\\Listeners\\HtmlOutputPrinter' html/modules/contrib/yoast_seo"
