Test analysis of nodes using Behat
This creates some tools for Behat so that we can create a node type in
the `testing` Drupal profile and then test that the widget behaves as
expected for a simple node.

This test can be extended in the future to cover various reported bugs
and integrations.

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -4,10 +4,13 @@ default:
       paths:
         features: '%paths.base%/features'
       contexts:
-        - Behat\MinkExtension\Context\MinkContext
+        - Drupal\Tests\yoast_seo\Context\Setup
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\DrushContext
-        - Drupal\Tests\yoast_seo\Context\Setup
+        - Drupal\DrupalExtension\Context\MinkContext
+        - Drupal\Tests\yoast_seo\Context\Log
+        - Drupal\Tests\yoast_seo\Context\Node
+        - Drupal\Tests\yoast_seo\Context\Widget
   extensions:
     DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
     Drupal\MinkExtension:
