Stop Behat DrupalExtension from performing database cleanup
It's very useful to be able to inspect the state of a failing scenario
after the test has stopped. We already have tooling in our SetupContext
that will perform a fresh set-up for every scenario so there's no reason
for us to do post-test cleanup.

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -5,9 +5,9 @@ default:
         features: '%paths.base%/features'
       contexts:
         - Drupal\Tests\yoast_seo\Context\Setup
-        - Drupal\DrupalExtension\Context\DrupalContext
-        - Drupal\DrupalExtension\Context\DrushContext
-        - Drupal\DrupalExtension\Context\MinkContext
+        - Drupal\Tests\yoast_seo\Context\DrupalContext
+        - Drupal\Tests\yoast_seo\Context\DrushContext
+        - Drupal\Tests\yoast_seo\Context\MinkContext
         - Drupal\Tests\yoast_seo\Context\Entity
         - Drupal\Tests\yoast_seo\Context\Log
         - Drupal\Tests\yoast_seo\Context\Node
