--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "drupal/core": "^8 || ^9 || ^10",
-        "drupal/metatag": "^1.3",
+        "drupal/metatag": "^1.3 || ^2.0",
         "goalgorilla/rtseo.js": "^2.0"
     },
     "require-dev": {
