--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "drupal/core": "^8 || ^9 || ^10",
+        "drupal/core": "^8 || ^9 || ^10 || ^11",
         "drupal/metatag": "^1.3 || ^2.0",
         "goalgorilla/rtseo.js": "^2.0"
     },
